envoyfilter-teaching/envoyfilter/httpconnectionmanager/ef-route_config-virtual_hosts-routes-route-genral.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: httpconnectionmanager
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      context: GATEWAY
      listener:
        portNumber: 8080
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
    patch:
      operation: MERGE
      value:
              name: envoy.filters.network.http_connection_manager
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                route_config:
                  name: test
                  virtual_hosts:
                  - name: test
                    domains:
                    - "*"
                    routes:
                    - name: testroute
                      match: 
                        prefix: /product
                      route:
                        cluster_not_found_response_code: NOT_FOUND
                        metadata_match:
                          filter_metadata:
                            "envoy.lb": 
                              canary: aaa
                        timeout: 10s
                        idle_timeout: 5s
                        priority: HIGH
                        max_stream_duration: 
                          max_stream_duration: 10s
                          grpc_timeout_header_max: 5s
                          grpc_timeout_header_offset: 3s
                        cluster: outbound|9080||productpage.istio.svc.cluster.local
